app/assets/stylesheets/components/app_footer.scss
html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: $footer-height;
}

.app-footer-wrapper {
  display: flex;
  justify-content: center;
  width: 100%;
  position: absolute;
  bottom: 0;
}

.app-footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  color: #4f4f4f;
  height: $footer-height;
}

.app-footer-left {
  margin: 0;
  margin-right: 10px;
  display: flex;
  align-items: center;
  svg {
    width: 30px;
    height: auto;
  }

  .share > *{
    margin: 0 3px;
  }

  a[title='facebook'] path {
    fill: #1027a6;
  }

  a[title='twitter'] path {
    fill: #099bcf;
  }
}

